# percepto_task

./: CMakeLists.txt  client_tools.cpp  converter.cpp  converter.h  main.cpp  tools.cpp  tools.h
src/: CMakeLists.txt  README.txt  client_tools.cpp  client_tools.h  converter.cpp  converter.h  main.cpp  tools.cpp  tools.h
